src/objects/Billing_Custom_Distribution__c.object
<CustomObject>
    <description>stores each custom due distributions</description>
    <fields>
        <fullName>April__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>April</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>August__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>August</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>December__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>December</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>February__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>February</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month__c</fullName>
        <description>Stores the fiscal month for which the distribution happend</description>
        <label>Fiscal Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>January</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>July__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>July</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>June__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>June</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>March__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>March</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May__c</fullName>
        <label>May</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Member_Dues__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Dues</label>
        <referenceTo>Member_Dues__c</referenceTo>
        <relationshipLabel>Billing Custom Distributions</relationshipLabel>
        <relationshipName>Billing_Custom_Distributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>November__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>November</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>October__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>October</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>September__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>September</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_distributed_amount__c</fullName>
        <formula>January__c  +  February__c  +  March__c  +  April__c  +  May__c  +  June__c  +  July__c  +  August__c  +  September__c  +  October__c  +  November__c  +  December__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total distributed amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>should store the relationship type for the current distrubtion</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Billing Custom Distribution</label>
    <nameField>
        <displayFormat>Dist-{0000000}</displayFormat>
        <label>Billing Custom Distribution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Custom Distributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>